fix: (in 1282px) add align-items:center to all major containers, add gap in footer, remove div but add .container, add tabs

--- a/shelter/media-pets.css
+++ b/shelter/media-pets.css
@@ -1,10 +1,13 @@
 @media screen and (min-width: 1282px) {
-	div, .pets, .nav, .friends, .footer {
-	max-width: 100vw;
-	justify-content: center;
+	.pets, .container, .nav, .friends, .footer {
+		max-width: 100vw;
+		justify-content: center;
+		align-items: center;
 	}
 	
 	.burger { visibility: hidden; }
+	
+	.footer { gap: 160px; }
 }
 
 @media screen and (max-width: 1281px) {
